--- a/.gitignore
+++ b/.gitignore
@@ -125,3 +125,8 @@ export_presets.cfg
 data_*/
 
 # End of https://www.toptal.com/developers/gitignore/api/godot
+
+# I use Ghostwriter to edit readme files - annoyingly, it creates these .backup
+# files - so we're just gonna ignore them.
+*.md.backup
+
