Update XSM from 1.0.0 to 1.1.0
XSM had an update, so I've updated the files. The latest update added
a RootState type. It seems the root provides tools for monitoring the
substates, independent of existing in those states. Does that make
sense? Sort of a way of showing exterior nodes what's happening in the
machine's interior.

Also, I snuck the XSM repo's README file into the addon directory.
That saves me some documentation pain!

--- a/FicGuac/addons/xsm/plugin.cfg
+++ b/FicGuac/addons/xsm/plugin.cfg
@@ -1,8 +1,9 @@
 [plugin]
 
-name="XSM - Extanded State Machine"
+name="XSM - Extended State Machine"
 description="A personal implementation of StateCharts for Godot. This Extended State Machine provides easy to use timers and animations, simply by creating Nodes in Editor (composition). 
-A basic platform example shows the true power of xsm!"
+A basic platform example shows the true power of xsm!
+Easy Node composition system, timers, animations, regions..."
 author="ATN"
-version="1.0.0"
+version="1.1.0"
 script="xsm.gd"
