Update XSM to 1.4.0 (and fix the subsequent bugs)
Updated XSM to 1.4.0. I've been liking XSM a lot, and the creator
pushes out new updates pretty frequently.

Partially owing to that, we hadn't updated in quite some time. That
meant a lot of updates had piled up, including some incompatabilities.

And THAT required going through everything and anything that had a
state and fixing problems. Oof.

Also, an unrelated change I made got caught in the shuffle - the
Weapon Attack test has become the Attack Model Test. Of course, we
can't broach that until we've really developed an attack model...

--- a/FicGuac/addons/xsm/plugin.cfg
+++ b/FicGuac/addons/xsm/plugin.cfg
@@ -1,9 +1,11 @@
 [plugin]
 
-name="XSM - Extended State Machine"
+name="XSM - eXtended State Machine"
 description="A personal implementation of StateCharts for Godot. This Extended State Machine provides easy to use timers and animations, simply by creating Nodes in Editor (composition). 
 A basic platform example shows the true power of xsm!
-Easy Node composition system, timers, animations, regions..."
+Easy Node composition system, timers, animations, regions...
+
+Now with a StateRoot, pending States, substates call, an active states list and arguments to a state_change"
 author="ATN"
-version="1.1.0"
+version="1.4.0"
 script="xsm.gd"
