--- a/FicGuac/addons/xsm/plugin.cfg
+++ b/FicGuac/addons/xsm/plugin.cfg
@@ -5,7 +5,7 @@ description="A personal implementation of StateCharts for Godot. This Extended S
 A basic platform example shows the true power of xsm!
 Easy Node composition system, timers, animations, regions...
 
-Now with a StateRoot, pending States, substates call, an active states list and arguments to a state_change"
+Now with a StateRoot, pending States, substates call, an active states list and arguments to a state_change, but also (NEW) a history of the active states"
 author="ATN"
-version="1.4.0"
+version="1.4.4"
 script="xsm.gd"
